--- a/application/src/main/resources/fx/css/base-styling.css
+++ b/application/src/main/resources/fx/css/base-styling.css
@@ -182,6 +182,21 @@
     -fx-background-color: -fx-mid-text-color;
 }
 
+.search-summary {
+    -fx-spacing: 2.0;
+    -fx-padding: 5.0 10.0 10.0 10.0;
+}
+
+.search-summary .search-term {
+    -fx-wrap-text: true;
+    -fx-font-weight: bold;
+    -fx-padding: 0 0 5.0 0;
+}
+
+.search-summary .search-result-count {
+    -fx-font-size: 0.9em;
+}
+
 .favourite-issue-cell,
 .favourite-search-cell,
 .time-report-table .issue-title,
